[gd_scene load_steps=4 format=3 uid="uid://bk36n81tgbx1g"]

[ext_resource type="Script" path="res://menus/SongTitle.gd" id="3"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="3_hm66h"]
[ext_resource type="FontVariation" uid="uid://nyc27vir054y" path="res://fonts/default_font_bold.tres" id="4_oh0tk"]

[node name="SongTitle" type="HBoxContainer"]
use_parent_material = true
offset_right = 1612.0
offset_bottom = 67.0
theme_override_constants/separation = 20
script = ExtResource("3")

[node name="DifficultyLabel" type="Label" parent="."]
auto_translate_mode = 2
visible = false
use_parent_material = true
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 0.75
auto_translate = false
theme_override_fonts/font = ExtResource("4_oh0tk")
text = "(NT)[EXTREME]"
horizontal_alignment = 3
vertical_alignment = 1
uppercase = true

[node name="TitleLabel" type="Label" parent="."]
auto_translate_mode = 2
use_parent_material = true
layout_mode = 2
size_flags_vertical = 7
auto_translate = false
theme_override_fonts/font = ExtResource("3_hm66h")
text = "(NT)Song Title"
vertical_alignment = 1

[node name="AuthorLabel" type="Label" parent="."]
auto_translate_mode = 2
use_parent_material = true
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 0.75
auto_translate = false
theme_override_fonts/font = ExtResource("4_oh0tk")
text = "(NT)Ken asdsad"
horizontal_alignment = 3
vertical_alignment = 1
uppercase = true

[node name="CircleLabel" type="TextureRect" parent="."]
use_parent_material = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5
